@@ -27,12 +27,10 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
+import java.util.concurrent.ExecutionException;
 
 @Acl(allow = @Acl.Matcher(principal = Acl.Principal.INTERNET))
 @HttpEndpoint("/cache")
@@ -64,7 +62,8 @@ public class CacheEndpoint {
 
 
   /*
-  Note: The only real reason to have a separate cacheName entity is to maintain a description of the cache
+  Note: The only real reason to have a separate cacheName
+    entity is to maintain a description of the cache, and potentially additional settings
    */
   // Cache Names -- BEGIN
   public record CacheNameRequest(String cacheName, String description) {}
@@ -77,8 +76,6 @@ public class CacheEndpoint {
             .invokeAsync(cn)
             .thenApply(__ -> HttpResponses.created());
   }
-
-  // TODO: /cacheName/createBatch
 
   @Put("/cacheName")
   public CompletionStage<HttpResponse> update(CacheNameRequest request) {
@@ -141,27 +138,23 @@ public class CacheEndpoint {
   private CompletionStage<Done> scheduleTTLTimerIfNeeded(String cacheName, String key, Optional<Duration> requestTTLSeconds) {
     Optional<Duration> ttlSeconds = Optional.empty();
     String cacheId = cacheName.concat(key);
-    if (!requestTTLSeconds.isEmpty()) {
+    if (requestTTLSeconds.isPresent()) {
       ttlSeconds = requestTTLSeconds;
-    }
-    else if (!defaultTTL.isEmpty()) {
+    } else if (defaultTTL.isPresent()) {
       ttlSeconds = defaultTTL;
     }
-    if (!ttlSeconds.isEmpty()) {
+    if (ttlSeconds.isPresent()) {
       if (log.isDebugEnabled()) {
         log.debug("starting TTL timer for {} {} {}", cacheName, key, ttlSeconds.get().getSeconds());
       }
-      CompletionStage<Done> timerRegistration =
-              timerScheduler.startSingleTimer(
-                      "keys".concat(cacheId),
-                      ttlSeconds.get(),
-                      componentClient.forTimedAction()
-                              .method(CacheTimedAction::expireCacheTTL)
-                              .deferred(cacheId)
-              );
-      return timerRegistration;
-    }
-    else {
+      return timerScheduler.startSingleTimer(
+              "keys".concat(cacheId),
+              ttlSeconds.get(),
+              componentClient.forTimedAction()
+                      .method(CacheTimedAction::expireCacheTTL)
+                      .deferred(cacheId)
+      );
+    } else {
       return CompletableFuture.completedFuture(Done.done());
     }
 
@@ -174,16 +167,13 @@ public class CacheEndpoint {
             .invokeAsync(cache)
             .thenApply(result -> HttpResponses.created());
 
-    return setResult.thenCompose(result -> {
-        return scheduleTTLTimerIfNeeded(cacheName, key, cache.ttlSeconds())
-                .thenApply(__ -> result);
-    });
+    return setResult.thenCompose(result -> scheduleTTLTimerIfNeeded(cacheName, key, cache.ttlSeconds())
+            .thenApply(__ -> result));
   }
 
   private Cache createSmallCacheObject(CacheRequest cacheRequest) {
-    Optional<Duration> requestTTL = cacheRequest.ttlSeconds.isEmpty()
-            ? Optional.empty() : Optional.of(Duration.ofSeconds(cacheRequest.ttlSeconds.get()));
-    List<PayloadChunk> chunks = new ArrayList<>(Arrays.asList(new PayloadChunk(0, cacheRequest.value)));
+    Optional<Duration> requestTTL = cacheRequest.ttlSeconds.map(Duration::ofSeconds);
+    List<PayloadChunk> chunks = new ArrayList<>(List.of(new PayloadChunk(0, cacheRequest.value)));
     return new Cache(cacheRequest.cacheName, cacheRequest.key, requestTTL, false, false, chunks);
   }
 
@@ -197,8 +187,7 @@ public class CacheEndpoint {
           return CompletableFuture.completedFuture(HttpResponses.accepted());
         }
       });
-    }
-    else {
+    } else {
       return CompletableFuture.completedFuture(HttpResponses.accepted());
     }
   }
@@ -207,7 +196,7 @@ public class CacheEndpoint {
   private CompletionStage<Done> streamLargeObjectAsChunks(CacheRequest cacheRequest) {
     String cacheId = cacheRequest.cacheName.concat(cacheRequest.key);
     int objectSize = cacheRequest.value.length;
-    Long chunks = objectSize / maxPayloadSize;
+    long chunks = objectSize / maxPayloadSize;
     long remainder = objectSize % maxPayloadSize;
     if (remainder > 0) chunks++;
     int chunkSize = (int) (objectSize / chunks + 1); // just assume a fraction and bump
@@ -217,7 +206,7 @@ public class CacheEndpoint {
     }
 
     ByteString valueBytes = new ByteStringBuilder().putBytes(cacheRequest.value).result();
-    var chunkedResult = Source.single(valueBytes)
+    return Source.single(valueBytes)
             .via(new Chunker(chunkSize))
             .statefulMap(
                     () -> -1,
@@ -231,20 +220,18 @@ public class CacheEndpoint {
                     indexOnComplete -> Optional.empty()
             )
             .mapAsync(streamChunkParallelism, chunkPair -> {
-              Optional<Duration> requestTTL = cacheRequest.ttlSeconds.isEmpty()
-                      ? Optional.empty() : Optional.of(Duration.ofSeconds(cacheRequest.ttlSeconds.get()));
+              Optional<Duration> requestTTL = cacheRequest.ttlSeconds.map(Duration::ofSeconds);
               var imageblder = new ByteStringBuilder();
               imageblder.addAll(chunkPair.second());
               PayloadChunk payloadChunk = new PayloadChunk(chunkPair.first(), imageblder.result().toArray());
               if (chunkPair.first() == 0) {
-                List<PayloadChunk> initChunks = new ArrayList<>(Arrays.asList(payloadChunk));
+                List<PayloadChunk> initChunks = new ArrayList<>(List.of(payloadChunk));
                 Cache initCache = new Cache(cacheRequest.cacheName, cacheRequest.key, requestTTL, false, false, initChunks);
                 return componentClient.forEventSourcedEntity(cacheId)
                         .method(CacheEntity::set)
                         .invokeAsync(initCache)
                         .thenApply(result -> HttpResponses.created());
-              }
-              else {
+              } else {
                 return componentClient.forEventSourcedEntity(cacheId)
                         .method(CacheEntity::setWithChunk)
                         .invokeAsync(payloadChunk)
@@ -252,8 +239,6 @@ public class CacheEndpoint {
               }
             })
             .runWith(Sink.ignore(), materializer);
-
-    return chunkedResult;
   }
 
   @Post("/")
@@ -262,15 +247,14 @@ public class CacheEndpoint {
             .thenCompose(result -> {
               if (result.status().isSuccess()) {
                 // based upon: "Entity command too large, request payload and metadata must not be more than 524201 bytes but was 1930695"
-                boolean largeObject = cacheRequest.value.length > maxPayloadSize ? true : false;
+                boolean largeObject = cacheRequest.value.length > maxPayloadSize;
                 if (log.isDebugEnabled() && largeObject) {
                   log.debug("max payload size is {}. large cache object detected. Size is {} bytes", maxPayloadSize, cacheRequest.value.length);
                 }
                 if (largeObject) {
                   CompletionStage<Done> streamResult = streamLargeObjectAsChunks(cacheRequest);
                   return streamResult.thenApply(rs -> HttpResponses.created());
-                }
-                else {
+                } else {
                   return createCacheEntity(cacheRequest.cacheName, cacheRequest.key, createSmallCacheObject(cacheRequest));
                 }
               }
@@ -278,14 +262,13 @@ public class CacheEndpoint {
             });
   }
 
-  // TODO : Create batched Cache
-  // TODO : Create batched Cache w/ TTL
-
   private CompletionStage<CacheInternalGetResponse> getCache(String compoundKey) {
     return componentClient.forEventSourcedEntity(compoundKey)
             .method(CacheEntity::get)
             .invokeAsync();
   }
+
+  public record CacheGetResponse(String cacheName, String key, Boolean success, byte[] value) {}
 
   @Get("/{cacheName}/{key}")
   public CompletionStage<CacheGetResponse> getCache(String cacheName, String key) {
@@ -293,9 +276,8 @@ public class CacheEndpoint {
     return getCache(compoundKey)
             .thenCompose(internalGetResponse -> {
               if (internalGetResponse.chunks() == 1) {
-                return CompletableFuture.completedFuture(new CacheGetResponse(internalGetResponse.cacheName(), internalGetResponse.key(), internalGetResponse.firstChunk().payload()));
-              }
-              else {
+                return CompletableFuture.completedFuture(new CacheGetResponse(internalGetResponse.cacheName(), internalGetResponse.key(), true, internalGetResponse.firstChunk().payload()));
+              } else {
                 List<CompletableFuture<PayloadChunk>> getChunkFutures = new ArrayList<>();
                 // capture the initial chuck returned by the get
                 getChunkFutures.add(CompletableFuture.completedFuture(internalGetResponse.firstChunk()));
@@ -315,14 +297,131 @@ public class CacheEndpoint {
                             completeObject.addAll(bytes);
                           });
                           // convert the total object back into byte[]
-                          return new CacheGetResponse(cacheName, key, completeObject.result().toArray());
+                          return new CacheGetResponse(cacheName, key, true, completeObject.result().toArray());
                         })
                         .exceptionally(ex -> { // TODO: retry w/ backoff
                           String msg = String.format("an exception occurred while retrieving chunks for cache %s key %s:", cacheName, key);
                           log.error(msg, ex.getMessage());
-                          return null;
+                          return new CacheGetResponse(cacheName, key, false, new byte[0]);
                         });
               }
+            });
+  }
+
+  @Delete("/{cacheName}/{key}")
+  public CompletionStage<HttpResponse> delete(String cacheName, String key) {
+    String compoundKey = cacheName.concat(key);
+    return componentClient.forEventSourcedEntity(compoundKey)
+            .method(CacheEntity::delete)
+            .invokeAsync()
+            .thenApply(__ -> {
+              // cancel a timer if active
+              timerScheduler.cancel(compoundKey);
+              return HttpResponses.accepted();
+            });
+  }
+
+  public record BatchCacheRequest(List<CacheRequest> cacheRequests) {}
+
+  public record BatchCacheRequestResults(HttpResponse httpResponse, CacheRequest cacheRequest) {}
+
+  public record BatchCacheResult(String cacheName, String key, Boolean success) {}
+
+  public record BatchCacheResponse(Boolean complete, List<BatchCacheResult> results) {}
+
+  @Post("/batch/")
+  public CompletionStage<BatchCacheResponse> cacheBatch(BatchCacheRequest batchCacheRequest) {
+    List<CompletableFuture<BatchCacheRequestResults>> batchCacheRequestFutures = new ArrayList<>();
+    batchCacheRequest.cacheRequests.forEach(cacheRequest -> batchCacheRequestFutures.add(
+            cache(cacheRequest).thenApply(result -> new BatchCacheRequestResults(result, cacheRequest))
+                    .toCompletableFuture()
+    ));
+    return FutureHelper.allOf(batchCacheRequestFutures)
+            .thenApply(results -> new BatchCacheResponse(true, Collections.emptyList()))
+            .exceptionally(ex -> {
+              // collect results from actual future list
+              List<BatchCacheResult> results = new ArrayList<>();
+              for (CompletableFuture<BatchCacheRequestResults> future : batchCacheRequestFutures) {
+                try {
+                  CacheRequest cacheRequest = future.get().cacheRequest;
+                  if (future.isCompletedExceptionally()) {
+                    results.add(new BatchCacheResult(cacheRequest.cacheName, cacheRequest.key, false));
+                  }
+                  else {
+                    results.add(new BatchCacheResult(cacheRequest.cacheName, cacheRequest.key, true));
+                  }
+                }
+                catch (InterruptedException | ExecutionException e) {
+                  log.error("cacheBatch: This shouldn't happen, but just in case: {}", ex.getMessage(), ex);
+                }
+              }
+              return new BatchCacheResponse(false, results);
+            });
+  }
+
+  public record BatchGetCacheRequest(String cacheName, String key) {}
+  public record BatchGetCacheRequests(List<BatchGetCacheRequest> getCachedBatch) {}
+  public record BatchGetCacheResponse(Boolean complete, List<CacheGetResponse> results) {}
+
+  @Post("/batch/get")
+  public CompletionStage<BatchGetCacheResponse> getCacheBatch(BatchGetCacheRequests getBatchRequests) {
+    List<CompletableFuture<CacheGetResponse>> getBatchFutures = new ArrayList<>();
+      for (BatchGetCacheRequest request : getBatchRequests.getCachedBatch) {
+          getBatchFutures.add(
+                  getCache(request.cacheName, request.key)
+                          .toCompletableFuture()
+          );
+      }
+      return FutureHelper.allOf(getBatchFutures)
+            .thenApply(results -> new BatchGetCacheResponse(true, results))
+            .exceptionally(ex -> {
+              // collect results from actual future list
+              List<CacheGetResponse> getCacheResults = new ArrayList<>();
+              getBatchFutures.forEach(goodOrBadResult -> {
+                try {
+                  CacheGetResponse cacheGetResponse = goodOrBadResult.get();
+                  getCacheResults.add(cacheGetResponse);
+                }
+                catch (InterruptedException | ExecutionException e) {
+                  log.error("getCacheBatch: This shouldn't happen, but just in case: {}", ex.getMessage(), ex);
+                }
+              });
+              return new BatchGetCacheResponse(false, getCacheResults);
+            });
+  }
+
+  public record CacheDeleteResponse(String cacheName, String key, Boolean success) {}
+
+  public record BatchDeleteCacheResponse(Boolean success, List<CacheDeleteResponse> cacheDeleteResponses) {}
+
+  @Delete("/batch/")
+  public CompletionStage<BatchDeleteCacheResponse> deleteCacheBatch(BatchGetCacheRequests getBatchRequests) {
+    List<CompletableFuture<CacheDeleteResponse>> getBatchFutures = new ArrayList<>();
+    for (BatchGetCacheRequest request : getBatchRequests.getCachedBatch) {
+      getBatchFutures.add(
+              delete(request.cacheName, request.key)
+                      .thenApply(deleteResult -> {
+                        Boolean success = deleteResult.status().isSuccess() ? true : false;
+                        return new CacheDeleteResponse(request.cacheName(), request.key, success);
+                      })
+                      .toCompletableFuture()
+      );
+    }
+    return FutureHelper.allOf(getBatchFutures)
+            .thenApply(results -> new BatchDeleteCacheResponse(true, results))
+            .exceptionally(ex -> {
+              // collect results from actual future list
+              List<CacheDeleteResponse> getCacheResults = new ArrayList<>();
+              getBatchFutures.forEach(goodOrBadResult -> {
+                try {
+                  CacheDeleteResponse cacheGetResponse = goodOrBadResult.get();
+                  getCacheResults.add(cacheGetResponse);
+                }
+                catch (InterruptedException | ExecutionException e) {
+                  log.error("deleteCacheBatch: This shouldn't happen, but just in case: {}", ex.getMessage(), ex);
+                }
+              });
+              return new BatchDeleteCacheResponse(false, getCacheResults);
             });
   }
 
